--- a/_config.yml
+++ b/_config.yml
@@ -21,13 +21,13 @@
 title: SANGJAE_PARK 
 email: mainpower4309@gmail.com
 description: # this means to ignore newlines until "baseurl:"
-baseurl: "ramulator2" # the subpath of your site, e.g. /blog
-url: "https://sangjae4309.github.io" # the base hostname & protocol for your site, e.g. http://example.com
+baseurl: "" # the subpath of your site, e.g. /blog
+url: "" # the base hostname & protocol for your site, e.g. http://example.com
 twitter_username: jekyllrb
 github_username:  jekyll
 
 # Build settings
-remote_theme: just-the-docs
+theme: just-the-docs
 plugins:
   - jekyll-feed
 
