--- a/_config.yml
+++ b/_config.yml
@@ -5,7 +5,8 @@ baseurl: "" # the subpath of your site, e.g. /blog
 url: "" # the base hostname & protocol for your site, e.g. http://example.com
 
 # Build settings
-theme: just-the-docs
+#theme: "just-the-docs" # for local
+remote_theme: pmarsceill/just-the-docs # for github
 
 # Callout definition
 callouts:
