docs_ramulator2 --> docs_gem5:

--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,6 @@
-title: Ramulator2 
+title: gem5
 email: mainpower4309@gmail.com
-permalink: /docs_ramulator2
+permalink: /docs_gem5
 
 # Build settings
 #theme: "just-the-docs" # for local
